<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customcolor2"
    tools:context=".StartFragment">

    <TextView
        android:id="@+id/bakat"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="68dp"
        android:gravity="center_horizontal|top"
        android:text="@string/bakat"
        android:textAppearance="@style/bakat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_start"
        style="@style/shape1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="44dp"
        android:text="Start"
        android:textColor="#272626"
        app:backgroundTint="#E6A371"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caption3" />

    <TextView
        android:id="@+id/caption"
        style="@style/string_form"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginTop="140dp"
        android:text="@string/caption"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bakat" />

    <TextView
        android:id="@+id/caption3"
        style="@style/string_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/caption3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caption2" />

    <TextView
        android:id="@+id/caption2"
        style="@style/string_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/caption2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caption" />

</androidx.constraintlayout.widget.ConstraintLayout>