<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Form2Fragment"
    android:background="@color/customcolor2">

    <TextView
        android:id="@+id/bakat"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="168dp"
        android:gravity="center_horizontal|top"
        android:text="@string/bakat"
        android:textAppearance="@style/bakat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="32dp"
        android:text="@string/masukkan_nilai_yang_anda_peroleh"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/bakat"
        app:layout_constraintStart_toStartOf="@+id/bakat"
        app:layout_constraintTop_toBottomOf="@+id/bakat" />

    <TextView
        android:id="@+id/bahasa_indo"
        style="@style/string_form"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        android:gravity="center_horizontal|top"
        android:text="@string/bahasa_indo"
        android:textAppearance="@style/string_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/input_bahasa_indo"
        style="@style/shape2"
        android:maxLength="5"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/bahasa_indo"
        app:layout_constraintTop_toBottomOf="@+id/bahasa_indo" />

    <TextView
        android:id="@+id/bahasa_inggris"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="68dp"
        android:gravity="center_horizontal|top"
        android:text="@string/bahasa_inggris"
        android:textAppearance="@style/string_form"
        app:layout_constraintEnd_toEndOf="@+id/bahasa_indo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bahasa_indo"
        app:layout_constraintTop_toBottomOf="@+id/bahasa_indo" />

    <EditText
        android:id="@+id/input_bahasa_inggris"
        style="@style/shape2"
        android:maxLength="5"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/bahasa_inggris"
        app:layout_constraintTop_toBottomOf="@+id/bahasa_inggris" />


    <TextView
        android:id="@+id/matematika"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal|top"
        android:text="@string/matematika"
        android:textAppearance="@style/string_form"
        app:layout_constraintEnd_toEndOf="@+id/bahasa_inggris"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/kesenian"
        app:layout_constraintTop_toBottomOf="@+id/bahasa_inggris" />

    <EditText
        android:id="@+id/input_mtk"
        style="@style/shape2"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/matematika"
        app:layout_constraintTop_toBottomOf="@+id/matematika" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/shape3"
        android:layout_width="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="512dp"
        android:text="@string/submit"
        app:backgroundTint="#E6A371"
        app:layout_constraintStart_toEndOf="@+id/input_mtk"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>