<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Form1Fragment"
    android:background="@color/customcolor2">

    <TextView
        android:id="@+id/bakat"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="168dp"
        android:gravity="center_horizontal|top"
        android:text="@string/bakat"
        android:textAppearance="@style/bakat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="32dp"
        android:text="@string/masukkan_nilai_yang_anda_peroleh"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/bakat"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/bakat"
        app:layout_constraintTop_toBottomOf="@+id/bakat" />

    <TextView
        android:id="@+id/fisika"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        android:gravity="center_horizontal|top"
        android:text="@string/fisika"
        android:textAppearance="@style/string_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/input_fisika"
        style="@style/shape2"
        android:maxLength="5"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/fisika"
        app:layout_constraintTop_toBottomOf="@+id/fisika" />

    <TextView
        android:id="@+id/kimia"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="68dp"
        android:gravity="center_horizontal|top"
        android:text="@string/kimia"
        android:textAppearance="@style/string_form"
        app:layout_constraintEnd_toEndOf="@+id/fisika"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fisika"
        app:layout_constraintTop_toBottomOf="@+id/fisika" />

    <EditText
        android:id="@+id/input_kimia"
        style="@style/shape2"
        android:maxLength="5"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/kimia"
        app:layout_constraintTop_toBottomOf="@+id/kimia" />


    <TextView
        android:id="@+id/biologi"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="68dp"
        android:gravity="center_horizontal|top"
        android:text="@string/biologi"
        android:textAppearance="@style/string_form"
        app:layout_constraintEnd_toEndOf="@+id/kimia"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/kimia"
        app:layout_constraintTop_toBottomOf="@+id/kimia" />

    <EditText
        android:id="@+id/input_biologi"
        style="@style/shape2"
        android:maxLength="5"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/biologi"
        app:layout_constraintTop_toBottomOf="@+id/biologi" />

    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="32dp"
        android:layout_height="23dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="516dp"
        android:background="@color/transparant"
        android:contentDescription="NEXT"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintStart_toEndOf="@+id/input_biologi"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>